<resources>
    <string name="app_name">BlablacarFinder</string>
    <string name="title_activity_map">Map</string>
    <string name="map">Map</string>
    <string name="place_name">Place name</string>
    <string name="places_amount">Places</string>
    <string name="address">Address</string>
    <string name="distance_from_user">Distance from you</string>
    <string name="distance">Distance</string>
    <string name="colon" translatable="false"> : </string>
    <string name="meters">meters</string>
    <string name="city">City</string>
    <string name="cancel">Back</string>
    <string name="view">View</string>
    <string name="unknown">Unknown</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="french" translatable="false">Français</string>
    <string name="english" translatable="false">English</string>
    <string name="kilometers">kilometers</string>
    <string name="kilometers_upper">Kilometers</string>
    <string name="meters_upper">Meters</string>
    <string name="dark_mode">Dark mode</string>
    <string name="save">Save and quit</string>

</resources>