<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/tv_adress_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/tv_adress_2_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places_amount"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/tv_places_amount_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="3"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/tv_distance_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="3"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>