<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="locale"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".Map" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infos_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_place_name"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            app:columnCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_place_name"
            app:rowCount="4"
            app:useDefaultMargins="true">


            <TextView
                android:id="@+id/TextView"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:text="@string/address"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/TextView1"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:text="@string/colon"
                app:layout_column="1"
                app:layout_row="0" />

            <TextView
                android:id="@+id/tv_address_1"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                app:layout_column="2"
                app:layout_row="0" />

            <TextView
                android:id="@+id/tv_address_2"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                app:layout_column="2"
                app:layout_row="1" />


            <TextView
                android:id="@+id/TextView2"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:text="@string/distance"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/TextView3"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:text="@string/colon"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/tv_distance"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                app:layout_column="2"
                app:layout_row="2" />

            <TextView
                android:id="@+id/TextView4"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:text="@string/places_amount"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/TextView5"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:text="@string/colon"
                app:layout_column="1"
                app:layout_row="3" />

            <TextView
                android:id="@+id/tv_nb_place"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                app:layout_column="2"
                app:layout_row="3" />


        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>